[package]
name = "slang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.0"
strum = "0.25.0"
strum_macros = "0.25.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "vm"
path = "src/vm/main.rs"

[[bin]]
name = "asm"
path = "src/asm/main.rs"
