[package]
name = "slang"
version = "0.1.0"
edition = "2021"
default-run = "example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.0"
strum = "0.25.0"
strum_macros = "0.25.0"
nom = "7.1.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "vm"
path = "src/vm/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[[bin]]
name = "asm"
path = "src/asm/main.rs"
